@@ -2,7 +2,6 @@ package com.github.qpcrummer.beatmaker.utils;
 
 import imgui.type.ImDouble;
 
-import java.util.Comparator;
 import java.util.List;
 
 public final class Comparer {
@@ -16,12 +15,12 @@ public final class Comparer {
         int list1LowIndex = 0;
         int list1HighIndex = 0;
         // Determine which is better
-        List<ImDouble[]> bigger = List.copyOf(list1).get(0)[0].get() > list2.get(0)[0].get() ? list1 : list2;
-        List<ImDouble[]> smaller = List.copyOf(list1).get(0)[0].get() < list2.get(0)[0].get() ? list1 : list2;
+        List<ImDouble[]> bigger = List.copyOf(list1).getFirst()[0].get() > list2.getFirst()[0].get() ? list1 : list2;
+        List<ImDouble[]> smaller = List.copyOf(list1).getFirst()[0].get() < list2.getFirst()[0].get() ? list1 : list2;
 
         // Find low index
         for (int i = 0; i < smaller.size(); i++) {
-            if (smaller.get(i)[1].get() > bigger.get(0)[0].get()) {
+            if (smaller.get(i)[1].get() > bigger.getFirst()[0].get()) {
                 list1LowIndex = i;
                 break;
             }
@@ -29,7 +28,7 @@ public final class Comparer {
 
         // Find high index
         for (int i = smaller.size() - 1; i >= 0; i--) {
-            if (smaller.get(i)[0].get() < bigger.get(bigger.size() - 1)[1].get()) {
+            if (smaller.get(i)[0].get() < bigger.getLast()[1].get()) {
                 list1HighIndex = i;
                 break;
             }
